--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ nav ul li a{
 @media screen and (max-width:800px) {
     *{
         font-size: calc((9px + 0.3vw) * 5);
+        scrollbar-width: none;
+    }
+    *::-webkit-scrollbar {
+        width: 0px;
     }
     .heroArea{
         flex-direction: column;
@@ -149,7 +153,7 @@ nav ul li a{
     }
     .backToTop{
         right: 2vw;
-        bottom: 1.2vw;
+        bottom: 1.2 vw;
     }
 }
 
