--- a/style.css
+++ b/style.css
@@ -155,5 +155,22 @@ nav ul li a{
         right: 40px;
         bottom: 5px;
     }
+    nav ul{
+        flex-direction: column;
+        flex-wrap: wrap;
+        border-radius: 6px;
+        height: auto;
+        align-items: flex-start;
+        padding: 20px 0 20px 30px;
+        background-color: white;
+        width: 90%;
+        left: 50%;
+        transform: translate(-50%,100px);
+        position: relative;
+        gap: 20px;
+    }
+    nav ul li .navBarLink{
+        color: #4462C6;
+    }
 }
 
