--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ nav ul li a{
     }
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:900px) {
     *{
         font-size: calc((9px + 0.3vw) * 5);
         scrollbar-width: none;
@@ -138,6 +138,8 @@ nav ul li a{
         align-items: center;
         justify-content: flex-end;
         flex-wrap: nowrap;
+        gap: 7vh;
+        padding: 0 0 10vh;
     }
     .heroArea h1{
         width: 85%;
@@ -156,6 +158,7 @@ nav ul li a{
         bottom: 5px;
     }
     nav ul{
+        visibility: hidden;
         flex-direction: column;
         flex-wrap: wrap;
         border-radius: 6px;
