--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -98,9 +98,9 @@ nav ul li a{
     margin: auto 0;
 }
 
-#butter{
+/* #butter{
     height: 300vh;
-}
+} */
 
 .backToTop{
     position: fixed;
@@ -122,11 +122,16 @@ nav ul li a{
 .progressBar{
     position: fixed;
     height: 10px;
-    width: 100%;
+    width: 0px;
     background-color: #4462C6;
     bottom: 0;
     left: 0;
     transition: 200ms;
+}
+
+.resume{
+    height: 100vh;
+    width: 100%;
 }
 
 @media screen and (min-width:900px){
