--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -129,9 +129,27 @@ nav ul li a{
     transition: 200ms;
 }
 
-.resume{
-    height: 100vh;
+#mainArticle{
     width: 100%;
+}
+
+.resume{
+    max-width: 900px;
+    margin: 100px auto;
+}
+
+.resume h1{
+    color: #4462C6;
+    font-size: 3rem;
+    font-weight: 800;
+    letter-spacing: 2px;
+    margin: 0 0 40px 0;
+}
+
+.resume h2{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 0 0 30px 0;
 }
 
 @media screen and (min-width:900px){
