change margin to work until 900px clientWidth

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -132,8 +132,8 @@ nav ul li p{
 }
 
 .resume{
-    max-width: 900px;
-    margin: 100px auto;
+    /* max-width: 900px; */
+    margin: 100px 15%;
 }
 
 .resume h1{
