--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -124,7 +124,7 @@ nav ul li p{
     position: fixed;
     height: 10px;
     width: 0px;
-    background-color: #4462C6;
+    background-color: #7e9cff;
     bottom: 0;
     left: 0;
     transition: 200ms;
