--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -32,6 +32,13 @@ body{
     padding: 0;
 }
 
+h1{
+    font-size: 3rem;
+    font-weight: 800;
+    letter-spacing: 2px;
+    margin: 0 0 40px 0;
+}
+
 nav{
     position:fixed;
     top: 0;
@@ -138,10 +145,6 @@ nav ul li p{
 
 .resume h1{
     color: #4462C6;
-    font-size: 3rem;
-    font-weight: 800;
-    letter-spacing: 2px;
-    margin: 0 0 40px 0;
 }
 
 .resume h2{
@@ -151,9 +154,66 @@ nav ul li p{
 }
 
 .missions{
-    height: 200vh;
     width: 100%;
+    padding: 100px 10%;
     background-color:#4462C6;
+}
+
+.missions h1{
+    color: white;
+}
+
+.missions ul{
+    margin: 0px;
+    padding: 0px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    grid-column-gap: 50px;
+    grid-row-gap: 50px;
+}
+
+.missions ul li{
+    list-style: none;
+    color: white;
+}
+
+.missions ul li:nth-child(1){
+    grid-area: 1/1/2/2;
+}
+
+.missions ul li:nth-child(2){
+    grid-area: 1/2/2/3;
+}
+
+.missions ul li:nth-child(3){
+    grid-area: 2/1/3/2;
+}
+
+.missions ul li:nth-child(4){
+    grid-area: 2/2/3/3;
+}
+
+.skills{
+    padding: 100px 15%;
+}
+
+.skills img{
+    width: 100px;
+    height: 100px;
+}
+
+.skills ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.skill ul li{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
 @media screen and (min-width:900px){
@@ -227,6 +287,37 @@ nav ul li p{
 
     .resume p{
         font-size: 0.3rem;
+    }
+
+    .missions h1{
+        font-size: 0.7rem;
+    }
+
+    .missions ul{
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(4,1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 20px;
+    }
+
+    .missions ul li{
+        font-size: 0.3rem;
+    }
+
+    .missions ul li:nth-child(1){
+        grid-area: 1/1/2/2;
+    }
+    
+    .missions ul li:nth-child(2){
+        grid-area: 2/1/3/2;
+    }
+    
+    .missions ul li:nth-child(3){
+        grid-area: 3/1/4/2;
+    }
+    
+    .missions ul li:nth-child(4){
+        grid-area: 4/1/5/2;
     }
 }
 
