--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -39,6 +39,14 @@ h1{
     margin: 0 0 40px 0;
 }
 
+.whiteOnBlueH1{
+    color: white;
+}
+
+.blueOnWhiteH1{
+    color: #4462C6;
+}
+
 nav{
     position:fixed;
     top: 0;
@@ -89,7 +97,6 @@ nav ul li p{
 }
 
 .heroArea h1{
-    color: white;
     font-weight: 800;
     font-size: 5rem;
     width: 30rem;
@@ -199,21 +206,58 @@ nav ul li p{
 }
 
 .skills img{
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
 }
 
 .skills ul{
     margin: 0;
     padding: 0;
     list-style: none;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    grid-column-gap: 80px;
+    grid-row-gap: 50px;
 }
 
-.skill ul li{
+.skills ul li{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.skills ul li h2{
+    width: 50%;
+}
+
+.skillsIcones{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 20px;
+    width: 50%;
+}
+
+.skills ul li:nth-child(1){
+    grid-area: 1/1/2/2;
+}
+
+.skills ul li:nth-child(2){
+    grid-area: 2/1/3/2;
+}
+
+.skills ul li:nth-child(3){
+    grid-area: 1/2/2/3;
+}
+
+.skills ul li:nth-child(4){
+    grid-area: 2/2/3/3;
 }
 
 @media screen and (min-width:900px){
@@ -318,6 +362,45 @@ nav ul li p{
     
     .missions ul li:nth-child(4){
         grid-area: 4/1/5/2;
+    }
+
+    .skills h1{
+        font-size: 0.7rem;
+    }
+
+    .skills ul{
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(4,1fr);
+    }
+
+    .skills ul li{
+        flex-wrap: wrap;
+    }
+
+    .skills ul li h2{
+        font-size: 0.35rem;
+        width: 100%;
+        text-align: center;
+    }
+
+    .skills ul li:nth-child(1){
+        grid-area: 1/1/2/2;
+    }
+    
+    .skills ul li:nth-child(2){
+        grid-area: 2/1/3/2;
+    }
+    
+    .skills ul li:nth-child(3){
+        grid-area: 3/1/4/2;
+    }
+    
+    .skills ul li:nth-child(4){
+        grid-area: 4/1/5/2;
+    }
+
+    .skillsIcones{
+        width: 100%;
     }
 }
 
