--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -107,7 +107,7 @@ nav ul li p{
     align-items: center;
 }
 
-.heroArea svg{
+.heroArea img{
     width: 30rem;
     height: 20rem;
     margin: auto 0;
@@ -128,7 +128,7 @@ nav ul li p{
     transition:visibility 0.3s linear,opacity 0.3s linear;
 }
 
-.backToTop svg{
+.backToTop img{
     width: 45px;
     height: 45px;
     transition: 0.2s linear;
@@ -261,7 +261,7 @@ nav ul li p{
 }
 
 @media screen and (min-width:900px){
-    .backToTop svg:hover{
+    .backToTop img:hover{
         transform: scale(1.2);
     }
 }
@@ -289,7 +289,7 @@ nav ul li p{
         justify-content: center;
         font-size: 1rem; /*1px plus 2% de la view width * 5 comme les 5rems plus hauts */
     }
-    .heroArea svg{
+    .heroArea img{
         margin: 30px 0;
         width: 6rem;
         height: 4rem;
