--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -432,7 +432,7 @@ nav button div.open:nth-child(3){
         border-radius: 6px;
         height: 0px;
         align-items: flex-start;
-        padding: 20px 0 20px 30px;
+        padding: 40px 0 30px 40px;
         background-color: white;
         width: 90%;
         left: 50%;
@@ -442,9 +442,15 @@ nav button div.open:nth-child(3){
         overflow: hidden;
         transition: all 0s;
         box-shadow: 0px 15px 20px 0px rgb(0 0 0 / 10%);
+        justify-content: space-between;
     }
     nav ul li .navBarLink{
         color: #4462C6;
+    }
+
+    nav ul li p{
+        font-size: 0.3rem;
+        margin: 0;
     }
 
     .resume{
