--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -351,7 +351,7 @@ nav button div.open:nth-child(3){
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     gap: 20px;
     width: 50%;
 }
