--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -408,6 +408,121 @@ nav button div.open:nth-child(3){
     grid-area: 2/2/3/3;
 }
 
+.wages{
+    padding: 100px 15%;
+    color: #4462C6;
+}
+
+.friseSalaires{
+    height: 5px;
+    width: 80%;
+    margin: 120px auto 25px 0;
+    background-color: #4462C6;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.friseSalaires .arrow{
+    height: 15px;
+    width: 15px;
+    border-top: 5px solid #4462C6;
+    border-right: 5px solid #4462C6;
+    transform: rotate(45deg) translate(-50%,-50%);
+    position: relative;
+    top: 5px;
+    left: 98%;
+    margin: 0;
+}
+
+.friseSalaires .barFrise{
+    width: 5px;
+    height: 15px;
+    position: relative;
+    top: 2.5px;
+    transform: translate(-50%,-50%);
+    background-color: #4462C6;
+}
+
+.salaireDebutant{
+    left: 20%;
+}
+
+.salaireDebutant p,.salaireIntermediare p,.salaireSenior p{
+    position: relative;
+    width: max-content;
+    margin: 0;
+    left: 50%;
+    transform: translate(-50%,-120%);
+}
+
+.salaireIntermediare{
+    left: 50%;
+}
+
+.salaireSenior{
+    left: 80%;
+}
+
+.diploma{
+    background-color: #4462C6;
+    padding: 100px 10%;
+}
+
+.diploma ul{
+    margin: 0;
+    padding: 0;
+}
+
+.diploma ul li{
+    list-style: none;
+    color: white;
+    margin: 0 0 20px 0;
+}
+
+.diploma ul li::before{
+    content: '-';
+}
+
+footer{
+    background-color: #3854b1;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer .droits{
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2c4598;
+}
+
+footer .droits p{
+    color: white;
+    margin: 0;
+}
+
+footer .sources ul{
+    padding: 0;
+    margin: 0;
+}
+
+footer .sources ul li{
+    list-style: none;
+}
+
+footer .sources a,footer .droits a:link,footer .droits a:active,footer .droits a:visited{
+    color: white;
+    margin: 0;
+    text-decoration: none;
+}
+
 @media screen and (min-width:900px){
     .backToTop img:hover{
         transform: scale(1.2);
@@ -583,6 +698,31 @@ nav button div.open:nth-child(3){
 
     .quality p{
         font-size: 0.3rem;
+    }
+    .wages p{
+        font-size: 0.3rem;
+    }
+    .friseSalaires{
+        margin: 75px auto 25px 0;
+        width: 100%;
+    }
+
+    .friseSalaires p{
+        text-align: center;
+        font-size: 0.25rem;
+    }
+
+    .friseSalaires .arrow{
+        left: 93%;
+    }
+    .salaireIntermediare p{
+        transform: translate(-50%,50%);
+    }
+    .diploma ul li{
+        font-size: 0.3rem;
+    }
+    footer .droits p{
+        font-size: 0.2rem;
     }
 }
 
