--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -487,11 +487,46 @@ nav button div.open:nth-child(3){
 footer{
     background-color: #3854b1;
     width: 100%;
-    height: 500px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+}
+
+footer .content{
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    padding: 20px 5% 20px 5%;
+    height: 100%;
+    gap: 10%;
+}
+
+footer .footerList{
+    margin-top: 40px;
+}
+
+footer .footerList ul{
+    padding: 0;
+    margin: 0;
+}
+
+footer .footerList ul li{
+    list-style: none;
+}
+
+footer .footerList a,footer .footerList a:link,footer .footerList a:active,footer .footerList a:visited{
+    color: white;
+    margin: 0;
+    text-decoration: none;
+    border: 0;
+}
+
+footer img{
+    width: 250px;
+    height: 165px;
+    margin-top: 40px;
 }
 
 footer .droits{
@@ -503,24 +538,10 @@ footer .droits{
     background-color: #2c4598;
 }
 
+
 footer .droits p{
     color: white;
     margin: 0;
-}
-
-footer .sources ul{
-    padding: 0;
-    margin: 0;
-}
-
-footer .sources ul li{
-    list-style: none;
-}
-
-footer .sources a,footer .droits a:link,footer .droits a:active,footer .droits a:visited{
-    color: white;
-    margin: 0;
-    text-decoration: none;
 }
 
 @media screen and (min-width:900px){
@@ -719,6 +740,30 @@ footer .sources a,footer .droits a:link,footer .droits a:active,footer .droits a
         transform: translate(-50%,50%);
     }
     .diploma ul li{
+        font-size: 0.3rem;
+    }
+    footer{
+        height: 500px;
+    }
+    footer img{
+        display: none;
+    }
+    footer .content{
+        flex-direction: column;
+        padding: 10% 5%;
+    }
+    footer .footerList{
+        margin: 0;
+    }
+    footer .footerList h2{
+        font-size: 0.5rem;
+        margin: 0 0 20px 0;
+    }
+    footer .footerList li{
+        height: 30px;
+        display: flex;
+    }
+    footer a{
         font-size: 0.3rem;
     }
     footer .droits p{
