--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -238,6 +238,8 @@ nav button div.open:nth-child(3){
     opacity: 0;
     visibility: hidden;
     transition:visibility 0.3s linear,opacity 0.3s linear;
+    border: 0;
+    background: none;
 }
 
 .backToTop img{
